Started setting domain classes

--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "homepage": "https://github.com/augusto-moura/calendario-eventos-cs2017-2#readme",
   "devDependencies": {
     "jest": "^21.2.0"
+  },
+  "dependencies": {
+    "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.13.5"
   }
 }
