Added admin user to postgres

--- a/shippable.yml
+++ b/shippable.yml
@@ -25,6 +25,8 @@ build:
   ci:
     - psql -c 'CREATE ROLE shippable WITH superuser;' -U postgres
     - psql -c 'CREATE DATABASE calendario;' -U postgres
+    - psql -c 'CREATE USER admin WITH PASSWORD admin@4376$;' -U postgres
+    - psql -c 'GRANT ALL PRIVILEGES ON DATABASE calendario to admin;' -U postgres
 
     # npm mirrors can sometimes be flacky, better to use shippable_retry
     # http://docs.shippable.com/ci/advancedOptions/retry/
