--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "^21.2.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.13.5"
