--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   },
   "homepage": "https://github.com/augusto-moura/calendario-eventos-cs2017-2#readme",
   "devDependencies": {
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^16.0.0",
     "jest": "^21.2.0"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.1",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
