--- a/shippable.yml
+++ b/shippable.yml
@@ -27,11 +27,15 @@ build:
     - psql -c 'CREATE DATABASE calendario;' -U postgres
     - psql -c "CREATE USER admin WITH PASSWORD 'admin@4376$;';" -U postgres
     - psql -c 'GRANT ALL PRIVILEGES ON DATABASE calendario to admin;' -U postgres
-
-    # npm mirrors can sometimes be flacky, better to use shippable_retry
-    # http://docs.shippable.com/ci/advancedOptions/retry/
-    - ./gradlew assemble
     - ./gradlew test
+
+
+
+install:
+- ./gradlew assemble
+
+script:
+- ./gradlew check
 
 # Integrations are used to connect external resources to CI
 # http://docs.shippable.com/integrations/overview/
