--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,5 +3,7 @@ server:
 spring:
   session:
     store-type: jdbc
-    jersey:
-      applicationPath: '/api'
+  jersey:
+    application-path: /api
+  server:
+      servlet-path: /
