--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+final boolean isContinuousIntegration = Boolean.valueOf(System.getenv('CI') ?: 'false')
+
 buildscript {
     ext {
         springBootVersion = '1.5.8.RELEASE'
@@ -25,6 +27,14 @@ repositories {
 
 springBoot {
     buildInfo()
+}
+
+test {
+	if (isContinuousIntegration) {
+		reports.junitXml.destination = file('shippable/testresults')
+	} else {
+		reports.junitXml.destination = file('build/test-results')
+	}
 }
 
 dependencies {
